  reduces memory usage
- the input site container and point container are now sets instead of lists.
  I may have to change this and use lists again. The reason for this change
  is that sets automatically check whether the inserted item has already been
  inserted; with lists one has to do that explicitly and it is very
  inefficient.

17 august 2004:  Menelaos Karavelas
- changed the API for the storage site classes; changed the classes that
  were using them accordingly
- updated the specs to reflect the API changes of the last few days.

14 August 2004:  Menelaos Karavelas
- fixed bugs in the demo files that were introduced by the changes of
  August 13

13 August 2004:  Menelaos Karavelas
***************************************************************
*** Day of the opening ceremony of the Athens Olympic Games ***
***************************************************************
- fixed errors in the doc: Segment_Voronoi_diagram_2 class: some typedefs
  where not really typedefs and some other ones where not written correctly
- Segment_Voronoi_diagram_2 class: fixed some typedefs (changes related to
  the changes above)
- replaced Are_same_points_2 predicate by Equal_2 according to the spec
- added the type Arrangement_type; this type was in the spec but was
  not defined
- added some methods in the simple site classes so that they conform
  with the spec; removed some methods not in the spec and modified the code
  wherever they were used.
- vertex base class: made some types that were not in the spec privat

12 August 2004:  Menelaos Karavelas
- made some more code conforming to the spec
- fixed bugs (due to yesterday's changes) that I forgot to fix

11 August 2004:  Menelaos Karavelas
- made code more conforming to the spec

10 August 2004:  Menelaos Karavelas
- added examples in user manual
- fixed minor problems in user manual
- added one more example in the examples directory
- made stylistic changes in the svd-filtered-traits.C example

